resource_customizations/gateway.solo.io/Gateway/testdata/gloo-accepted.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
status:
  statuses:
    gloo-system:
      reportedBy: gateway
      state: Accepted
      subresourceStatuses:
        '*v1.Proxy.gateway-proxy_gloo-system':
          reportedBy: gloo
          state: Accepted
        '*v1.Proxy.internal-proxy_gloo-system':
          reportedBy: gloo
          state: Accepted
