resource_customizations/gateway.solo.io/Gateway/testdata/gloo-warning.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
status:
  statuses:
    gloo-system:
      reason: "message that will describe all the reasons for warning"
      reportedBy: gateway
      state: Warning
      subresourceStatuses:
        '*v1.Proxy.gateway-proxy_gloo-system':
          reportedBy: gloo
          state: Accepted
        '*v1.Proxy.internal-proxy_gloo-system':
          reportedBy: gloo
          state: Warning
