resource_customizations/gateway.solo.io/Gateway/testdata/non-namespaced-gloo-accepted.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
status:
  reportedBy: gateway
  state: 1
  subresourceStatuses:
    '*v1.Proxy.gateway-proxy_gloo-system':
      reportedBy: gloo
      state: 1
    '*v1.Proxy.internal-proxy_gloo-system':
      reportedBy: gloo
      state: 1
