resource_customizations/gateway.solo.io/Gateway/testdata/non-namespaced-gloo-pending.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
status:
  statuses:
    gloo-system:
      reportedBy: gateway
      state: 0
      subresourceStatuses:
        '*v1.Proxy.gateway-proxy_gloo-system':
          reportedBy: gloo
          state: 1
        '*v1.Proxy.internal-proxy_gloo-system':
          reportedBy: gloo
          state: 0
