resource_customizations/gateway.solo.io/Gateway/testdata/terminating.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  name: terminating-resource
  deletionTimestamp: "2024-01-01T00:00:00Z"
  finalizers:
    - example.com/finalizer
